<resources>
    <string name="app_name">MyMenu</string>
    <string name="action_eula">EULA</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="filter">Filter</string>
    <string name="thumbnail">thumbnail</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="allergenes">Allergenes</string>
    <string name="type">Type</string>
    <string name="menu">Menu</string>
    <string name="textview">TextView</string>
</resources>
