<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.github.drraider.mymenu.menu.MenuActivity"
    tools:showIn="@layout/activity_menu">

    <TextView
        android:id="@+id/MenuDisplay_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/menu"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/MenuDisplay_name_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:layout_marginEnd="182dp"
        android:layout_marginStart="182dp"
        android:layout_marginTop="43dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/MenuDisplay_description_dish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MenuDisplay_header" />

    <TextView
        android:id="@+id/MenuDisplay_description_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="169dp"
        android:layout_marginEnd="160dp"
        android:layout_marginStart="159dp"
        android:layout_marginTop="65dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/MenuDisplay_allergenes_dish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MenuDisplay_name_dish" />


    <TextView
        android:id="@+id/MenuDisplay_allergenes_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="163dp"
        android:layout_marginStart="162dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/allergenes"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/MenuDisplay_type_dish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/MenuDisplay_type_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:layout_marginEnd="184dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="322dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/type"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MenuDisplay_header"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>